--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-outside-bounds-penalty/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,7 +61,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch master git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch test-PPO-outside-bounds-penalty git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -137,9 +137,7 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -270,9 +268,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
