--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-reward-annealing/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,7 +61,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch master git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch test-reward-annealing git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -119,7 +119,7 @@
         "from stable_baselines3.common.vec_env.dummy_vec_env import DummyVecEnv\n",
         "\n",
         "import my_environment\n",
-        "from my_environment.wrappers.wrappers import DiscreteActions3DOF, RecordVideoFigure\n",
+        "from my_environment.wrappers.wrappers import DiscreteActions3DOF, RecordVideoFigure, RewardAnnealing\n",
         "from gym.wrappers import TimeLimit\n"
       ]
     },
@@ -164,7 +164,7 @@
         "config = {\n",
         "    \"env_id\" : \"my_environment/Falcon3DOF-v0\",\n",
         "    \"policy_type\": \"MlpPolicy\",\n",
-        "    \"total_timesteps\": int(3e6),\n",
+        "    \"total_timesteps\": int(1e6),\n",
         "    \"timestep\" : 0.05,\n",
         "    \"max_time\" : 40,\n",
         "    \"RANDOM_SEED\" : 42,\n",
@@ -205,7 +205,6 @@
         "    # - max thrust gimbaled right\n",
         "    # - max thrust gimbaled left\n",
         "    # - max thrust downwards\n",
-        "\n",
         "    env = DiscreteActions3DOF(env)\n",
         "    env = TimeLimit(env, max_episode_steps=config[\"max_ep_timesteps\"])\n",
         "    env = Monitor(\n",
@@ -257,6 +256,41 @@
         "        )\n",
         "    ]\n",
         "\n",
+        "model.learn(\n",
+        "    total_timesteps=config[\"total_timesteps\"],\n",
+        "    callback=callbacksList\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def make_env(config):\n",
+        "    env = gym.make(\n",
+        "    config[\"env_id\"],\n",
+        "    IC=config[\"initial_conditions\"],\n",
+        "    ICRange=config[\"initial_conditions_range\"],\n",
+        "    timestep=config[\"timestep\"],\n",
+        "    seed=config[\"RANDOM_SEED\"]\n",
+        "    )\n",
+        "    # Anneal the reward (remove v_targ following reward)\n",
+        "    env = RewardAnnealing(env)\n",
+        "\n",
+        "    # Define a new custom action space with only three actions:\n",
+        "    # - no thrust\n",
+        "    # - max thrust gimbaled right\n",
+        "    # - max thrust gimbaled left\n",
+        "    # - max thrust downwards\n",
+        "    env = DiscreteActions3DOF(env)\n",
+        "    env = TimeLimit(env, max_episode_steps=config[\"max_ep_timesteps\"])\n",
+        "    return env\n",
+        "\n",
+        "env=make_env(config)\n",
+        "\n",
+        "model.set_env(env)\n",
         "model.learn(\n",
         "    total_timesteps=config[\"total_timesteps\"],\n",
         "    callback=callbacksList\n",
