--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -292,10 +292,9 @@
         "\n",
         "env=make_env(config)\n",
         "\n",
-        "def make_eval_env():\n",
-        "    training_env = make_env()\n",
+        "def make_eval_env(training_env=env):\n",
         "    return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
-        "    image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
+        "            image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
         "\n",
         "eval_env = DummyVecEnv([make_eval_env])\n",
         "\n",
@@ -332,7 +331,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3.7.12 ('beginnersPPO')",
       "language": "python",
       "name": "python3"
     },
@@ -346,11 +345,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.7.12"
     },
     "vscode": {
       "interpreter": {
-        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+        "hash": "6bb16cade9d36141ae9213d884fb1ae293e1d9fda2be68716a113c15fbf181a7"
       }
     }
   },
