--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-HER/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,15 +12,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bgoqZRSz3FQ",
-        "outputId": "b883c756-5d06-43c0-f653-86676a5add8c"
+        "outputId": "ae70e2bb-4d4a-4c14-b907-4ffff887e300"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat: /root/.ssh/id_ed25519.pub: No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "!cat ~/.ssh/id_ed25519.pub\n",
         "PUB_KEY = \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKRCMs6GPJ5kNi/fNVNf8Ki/QNwHS494mwuysriErNVs root@ac3a85e94cb7\""
@@ -37,15 +45,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I4Uab7q5v8nS",
-        "outputId": "c10d4094-9d73-407f-d445-cbf5aa0e9527"
+        "outputId": "df3f8157-967d-4e85-a1d7-2de03e497438"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# github.com:22 SSH-2.0-babeld-f50a2ace\n",
+            "Cloning into 'RL_rocket'...\n",
+            "Warning: Permanently added the ED25519 host key for IP address '140.82.112.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 1398, done.\u001b[K\n",
+            "remote: Counting objects: 100% (82/82), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (76/76), done.\u001b[K\n",
+            "remote: Total 1398 (delta 15), reused 25 (delta 6), pack-reused 1316\u001b[K\n",
+            "Receiving objects: 100% (1398/1398), 14.41 MiB | 13.42 MiB/s, done.\n",
+            "Resolving deltas: 100% (839/839), done.\n"
+          ]
+        }
+      ],
       "source": [
         "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
         "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
@@ -82,9 +106,99 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sWzlYmiY141N",
-        "outputId": "b29bdb0a-c577-443f-d52a-8c65efc4d0c5"
+        "outputId": "ca0ac58a-9c13-4fe5-b92d-c5aacd55a4ce"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting stable-baselines3==1.5.0\n",
+            "  Downloading stable_baselines3-1.5.0-py3-none-any.whl (177 kB)\n",
+            "\u001b[K     |████████████████████████████████| 177 kB 5.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.21.6)\n",
+            "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.12.0+cu113)\n",
+            "Collecting gym==0.21\n",
+            "  Downloading gym-0.21.0.tar.gz (1.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.5 MB 15.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cloudpickle in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.0)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (3.2.2)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.5)\n",
+            "Requirement already satisfied: importlib_metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21->stable-baselines3==1.5.0) (4.12.0)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (3.8.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (4.1.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (3.0.9)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (0.11.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib->stable-baselines3==1.5.0) (1.15.0)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->stable-baselines3==1.5.0) (2022.1)\n",
+            "Building wheels for collected packages: gym\n",
+            "  Building wheel for gym (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gym: filename=gym-0.21.0-py3-none-any.whl size=1616826 sha256=030e9eb92a8b235267be8c8c01a9a8a98ab954b956fc2801d8d5dc6374db827b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/76/ee/9c/36bfe3e079df99acf5ae57f4e3464ff2771b34447d6d2f2148\n",
+            "Successfully built gym\n",
+            "Installing collected packages: gym, stable-baselines3\n",
+            "  Attempting uninstall: gym\n",
+            "    Found existing installation: gym 0.17.3\n",
+            "    Uninstalling gym-0.17.3:\n",
+            "      Successfully uninstalled gym-0.17.3\n",
+            "Successfully installed gym-0.21.0 stable-baselines3-1.5.0\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Obtaining file:///content/RL_rocket\n",
+            "Requirement already satisfied: gym==0.21.0 in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (0.21.0)\n",
+            "Requirement already satisfied: scipy==1.7.3 in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (1.7.3)\n",
+            "Collecting pygame==2.1.2\n",
+            "  Downloading pygame-2.1.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 21.8 MB 1.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy==1.21.* in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (1.21.6)\n",
+            "Collecting wandb\n",
+            "  Downloading wandb-0.12.21-py2.py3-none-any.whl (1.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.8 MB 49.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.21.0->my-environment==0.0.1) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21.0->my-environment==0.0.1) (4.12.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21.0->my-environment==0.0.1) (4.1.1)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21.0->my-environment==0.0.1) (3.8.1)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (3.13)\n",
+            "Collecting GitPython>=1.0.0\n",
+            "  Downloading GitPython-3.1.27-py3-none-any.whl (181 kB)\n",
+            "\u001b[K     |████████████████████████████████| 181 kB 52.2 MB/s \n",
+            "\u001b[?25hCollecting pathtools\n",
+            "  Downloading pathtools-0.1.2.tar.gz (11 kB)\n",
+            "Collecting docker-pycreds>=0.4.0\n",
+            "  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)\n",
+            "Collecting sentry-sdk>=1.0.0\n",
+            "  Downloading sentry_sdk-1.9.0-py2.py3-none-any.whl (156 kB)\n",
+            "\u001b[K     |████████████████████████████████| 156 kB 55.2 MB/s \n",
+            "\u001b[?25hCollecting shortuuid>=0.5.0\n",
+            "  Downloading shortuuid-1.0.9-py3-none-any.whl (9.4 kB)\n",
+            "Collecting setproctitle\n",
+            "  Downloading setproctitle-1.3.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30 kB)\n",
+            "Requirement already satisfied: protobuf<4.0dev,>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (3.17.3)\n",
+            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (2.3)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (1.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (57.4.0)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (5.4.8)\n",
+            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (2.23.0)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (7.1.2)\n",
+            "Collecting gitdb<5,>=4.0.1\n",
+            "  Downloading gitdb-4.0.9-py3-none-any.whl (63 kB)\n",
+            "\u001b[K     |████████████████████████████████| 63 kB 1.9 MB/s \n",
+            "\u001b[?25hCollecting smmap<6,>=3.0.1\n",
+            "  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (2022.6.15)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (2.10)\n",
+            "Building wheels for collected packages: pathtools\n",
+            "  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8806 sha256=23eeb7602709b3b7bcfc4298eb9957d47ea2b67a5258975023c121445c355e93\n",
+            "  Stored in directory: /root/.cache/pip/wheels/3e/31/09/fa59cef12cdcfecc627b3d24273699f390e71828921b2cbba2\n",
+            "Successfully built pathtools\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install stable-baselines3==1.5.0\n",
         "\n",
@@ -107,11 +221,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sb-HCUk1v2KO",
-        "outputId": "6c10c7ee-cee5-43bd-b156-06abd747ba68"
+        "id": "Sb-HCUk1v2KO"
       },
       "outputs": [],
       "source": [
@@ -154,7 +264,9 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": []
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -171,12 +283,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "_MC0kpJp6Yuf",
-        "outputId": "202a1adb-63df-4a09-c0b1-2d1a6c5dfd16"
+        "id": "_MC0kpJp6Yuf"
       },
       "outputs": [],
       "source": [
@@ -189,7 +296,7 @@
         "config = {\n",
         "    \"env_id\" : \"my_environment/Falcon3DOFHER-v0\",\n",
         "    \"policy_type\": \"MultiInputPolicy\",\n",
-        "    \"total_timesteps\": int(5e3),\n",
+        "    \"total_timesteps\": int(3e6),\n",
         "    \"timestep\" : 0.05,\n",
         "    \"max_time\" : 40,\n",
         "    \"RANDOM_SEED\" : 42,\n",
@@ -241,11 +348,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oZ1ZGrab6TJh",
-        "outputId": "ab787710-4e9c-4e83-8276-938249cb7080"
+        "id": "oZ1ZGrab6TJh"
       },
       "outputs": [],
       "source": [
@@ -303,9 +406,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
